2.2.0/pages/modules.md
<!-- DO NOT add/remove column. `Min/Max version` columns will be automatically updated for the rows marked with `<AG>` at the end, via Integration test from 'agent-it' -->
<!-- Contents can be modified at will, key value for the update is column 'Instrumented Library' -->

| Title                                                                                      | Instrumented Library       | Min     | Max     | Comment                |  
|--------------------------------------------------------------------------------------------|----------------------------|---------|---------|------------------------|  
| [Tomcat](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/tomcat)                     |                            | 6.x     | 9.x     |                        | 
| [Jetty](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/jetty)                       |                            | 8.x     | 9.x     |                        | 
| [JBoss](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/jboss)                       |                            | 6.x     | 7.x     |                        | 
| [Resin](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/resin)                       |                            | 4.x     | 4.x     |                        | 
| [Websphere](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/websphere)               |                            | 6.x     | 8.x     |                        | 
| [Vertx](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/vertx)                       |                            | 3.3     | 3.5     |                        | 
| [Weblogic](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/weblogic)                 |                            | 10.x    | 12.x    |                        | 
| [Undertow](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/undertow)                 |                            |         |         |                        |
| [Undertow Servlet](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/undertow-servlet) |                            |         |         |                        |
| Jasper                                                                                     |                            |         |         |                        | 
|                                                                                            |                            |         |         |                        |
| Java Async Thread                                                                          |                            |         |         |                        |
|                                                                                            |                            |         |         |                        |
| OpenWhisk                                                                                  | whisk.core                 |         |         |                        | 
|                                                                                            |                            |         |         |                        |
| SpringMVC Framework                                                                        | spring-webmvc              | 3.0.7   | 5.2.9   |                        | <AG>
| Spring Web                                                                                 | spring-web                 | 4.1.2   | 4.3.29  |                        | <AG>
| Spring RabbitMQ                                                                            | spring-rabbit              | 1.3.3   | 2.2.12  |                        | <AG>
| Spring IBatis                                                                              | spring-ibatis              | 2.0.7   | 2.0.8   |                        | <AG>
| Spring MyBatis                                                                             | mybatis-spring             | 1.1.0   | 1.3.3   |                        | <AG>
| \*[Spring Boot](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/spring-boot)  | spring-boot-autoconfigure  |         |         |                        |
| \*[Spring Webflux](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/spring-webflux)   | spring-webflux             |         |         |                        |    
|                                                                                            |                            |         |         |                        | 
| MyBatis                                                                                    | mybatis                    | 3.0.3   | 3.3.1   |                        | <AG>
| [Hystrix](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/hystrix)                   | hystrix-core               | 1.4.0   | 1.5.18  |                        | <AG>
|                                                                                            |                            |         |         |                        |
| JDKHTTP                                                                                    |                            |         |         |                        |
| Httpclient3                                                                                | commons-httpclient         | 3.0     | 3.1     |                        | <AG>
| Httpclient4                                                                                | httpclient                 | 4.0     | 4.5.4   |                        | <AG>  
| Thrift                                                                                     | libthrift                  | 0.9.1   | 0.13.0  |                        | <AG> 
| Google HTTP Client                                                                         | google-http-client         | 1.19.0  | 1.36.0  |                        | <AG> 
| AsyncHttpClient                                                                            | async-http-client          | 1.7.24  | 1.8.17  |                        | <AG> 
| OkHttp                                                                                     | okhttp                     | 2.0.0   | 3.3.1   |                        | <AG> 
| Apache HttpAsyncClient                                                                     | httpasyncclient            | 4.0     | 4.1.3   |                        | <AG>
| \*Akka HTTP                                                                                | akka-http_2.12             | 10.1.0  | 10.1.x  |                        | 
| \*[Kafka](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/kafka)                     | kafka-clients              | 0.11.0.1|         |                        |
| GRPC                                                                                       | grpc-stub                  | 1.8.0   | 1.33.1  |                        | <AG>
| \*[Reactor](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/reactor)                 | reactor-core               | 3.3.0   | 3.3.1   |                        |
| \*[Reactor Netty](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/reactor-netty)     | reactor-netty              | 0.8.0   | 0.9.2   |                        | 
|                                                                                            |                            |         |         |                        | 
| Log4j                                                                                      | log4j                      | 1.2.16  | 1.2.17  |                        | <AG> 
| Logback                                                                                    | logback-classic            | 1.0.13  | 1.2.3   |                        | <AG> 
| Log4j2                                                                                     | log4j-core                 | 2.0     | 2.12.1  |                        | <AG>
|                                                                                            |                            |         |         |                        |
| \*Arcus                                                                                    | arcus-java-client          | 1.7.0   | 1.11.4  |                        | 
| \*MsSQL (jTDS)                                                                             | jtds                       | 1.2.8   |         |                        |
| \*MsSQL                                                                                    | mssql-jdbc                 |         |         |                        | 
| HikariCP                                                                                   | HikariCP-java6             | 2.3.0   | 2.3.13  |                        | <AG>
| Jackson-mapper-asl                                                                         | jackson-mapper-asl         | 1.0.1   | 1.8.11  |                        | <AG>
| Jackson Databind                                                                           | jackson-databind           | 2.0.6   | 2.12.0  |                        | <AG>
| MariaDB Connector/J                                                                        | mariadb-java-client        | 1.3.0   | 2.7.0   |                        | <AG>
| MongoDB Java Driver                                                                        | mongodb-driver             | 3.0.0   | 3.12.7  |                        | <AG>
| [Elasticsearch](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/elasticsearch-bboss) | bboss-elasticsearch-rest-jdbc | 5.6.9   | 5.8.2   |                     | <AG>
| Elasticsearch                                                                              | elasticsearch-rest-high-level-client | 6.0.0   | 7.10.0  |              | <AG>
| Datastax Java Driver                                                                       | cassandra-driver-core      | 2.0.10  | 3.10.2  |                        | <AG>
| Druid                                                                                      | druid                      | 1.0.0   | 1.2.3   |                        | <AG>
| \*Cubrid                                                                                   | cubrid-jdbc-driver         | 8.4.1   | 10.0.0  |                        | 
| \*Commons DBCP                                                                             | commons-dbcp               | 1.0     | 1.4     |                        | 
| \*Commons DBCP2                                                                            | commons-dbcp2              | 2.0     | 2.5.0   |                        | 
| \*HBase                                                                                    | hbase-client               | 1.2.6.1 | 1.2.6.1 |                        |
| \*MySQL                                                                                    | mysql-connector-java       | 5.0     | 8.x     |                        |
| \*Oracle JDBC Driver                                                                       | ojdbc                      |         |         |                        |
| \*PostgreSQL JDBC Driver                                                                   | postgresql                 |         |         |                        |
| \*[Redis](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/redis)                     | jedis                      | 2.4.2   |         |                        |
| \*[Redis](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/redis-lettuce)             | lettuce-core               | 5.0.0   | 5.1.2   |                        |
| \*[Redis](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/redis-redisson)            | redisson                   | 3.10.0  | 3.10.4  |                        |
|                                                                                            |                            |         |         |                        |
| Apache CXF                                                                                 | cxf-rt-rs-client           | 3.0.0   | 3.4.1   |                        | <AG> 
| Netty                                                                                      | netty-all                  | 4.1.0   | 4.1.54  |                        | <AG> 
| ActiveMQ                                                                                   | activemq-all               | 5.1.0   | 5.16.0  |                        | <AG> 
| [RxJAVA](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/rxjava)                     | rxjava                     | 1.0.0   | 1.3.8   |                        | <AG> 
| [RabbitMQ](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/rabbitmq)                 | amqp-client                | 2.7.0   | 5.10.0  |                        | <AG> 
| [Paho MQTT](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/paho-mqtt)               | org.eclipse.paho.client.mqttv3 | 1.0.2   | 1.2.5   |                        | <AG>
| [Paho MQTT](https://github.com/pinpoint-apm/pinpoint/tree/master/plugins/paho-mqtt)               | org.eclipse.paho.mqttv5.client | 1.2.5   | 1.2.5   |                        | <AG>
|                                                                                            |                            |         |         |                        |
| Gson                                                                                       | gson                       | 1.1     | 2.8.3   |                        | <AG>
| Json                                                                                       | json-lib                   | 1.0     | 2.2.2   |                        | <AG>
| FastJson                                                                                   | fastjson                   | 1.2.10  | 1.2.74  |                        | <AG>
| Dubbo                                                                                      | dubbo                      | 2.5.1   | 2.6.9   |                        | <AG> 
 
| kafka-clients                                                                     | kafka-clients              | 0.11.0.0| 2.5.1   |                        | <AG> 
| postgresql                                                                        | postgresql                 | 9.4.1208| 42.2.18 |                        | <AG> 
